# blockchain-mcp

./: .dockerignore  DOCKER_TEST_RESULTS.md  Dockerfile  Dockerfile.http  FIXES_SUMMARY.md  HTTP_SERVER_SUMMARY.md  README.md  compose.yaml  debug_test.sol  final_test.sol  main.py  pyproject.toml  quick_http_test.py  simple_test.py  test.py  test_cleaning.py  test_cleaning.sol  test_comprehensive.py  test_contract.sol  test_http_server.py  test_mcp_client.py  test_mcp_server.py  test_tool_calls.py
src/blockchain_vuln_analyzer/: __main__.py  http_main.py  http_server.py  server.py
src/blockchain_vuln_analyzer/tools/: __init__.py  base.py  echidna.py  echidna_tool.py  maian.py  main.py  manager.py  manticore.py  mythril.py  mythril_tool.py  scoring.py  slither.py  slither_tool.py  smartcheck.py
src/crytic-export/: combined_solc.json
