[project]
name = "blockchain-vuln-analyzer"
version = "0.1.0"
description = "MCP server for blockchain vulnerability analysis using Mythril and Slither"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "mcp>=1.12.1",
 "mythril>=0.24.8",
 "slither-analyzer>=0.9.2",
 "solc-select>=1.1.0",
 "fastapi>=0.104.0",
 "uvicorn>=0.24.0",
 "pydantic>=2.0.0",
 "crytic-compile>=0.3.10",
 "agno>=1.7.7",
 "google-genai>=1.28.0",
]
[[project.authors]]
name = "Siddid-Soni"
email = "siddidsoni@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
blockchain-vuln-analyzer = "blockchain_vuln_analyzer:main"
blockchain-vuln-analyzer-http = "blockchain_vuln_analyzer.http_main:main"
